Fix bootstrap compilation and Java 8 compatibility in rules_java